# IndProg

./: README.md
.github/workflows/: blank.yml  task1.yml
Task1/: .clang-tidy  CMakeLists.txt  conanfile.txt
Task1/compressor/: CMakeLists.txt
Task1/compressor/src/: compressor.cpp
Task1/libcompressor/: CMakeLists.txt
Task1/libcompressor/include/libcompressor/: libcompressor.hpp
Task1/libcompressor/src/: libcompressor.cpp
Task1/libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
