add_executable(libcompressortest libcompressortest.cpp)

find_package(GTest REQUIRED)

target_link_libraries(libcompressortest PRIVATE libcompressor GTest::GTest)

add_test(
  NAME libcompressortest
  COMMAND libcompressortest
    --gtest_output=xml:${CMAKE_BINARY_DIR}/test_result/test_results.xml
)